# cfkit

./: Codeforces_OOP.py  MANIFEST.in  README.md  cfkit.conf  cfkit.py  commands.py  executing_commands.txt  languages.json  memory.py  platforms.json  pyproject.toml  setup.py  submit_solution.py  test(1).go
Hello/: gcc.out  hello.out
cfkit/: 1.py  179A.html  1872A.html  1873A.html  __init__.py  __main__.py  cli.py  commands.py  config.py  contest.py  copie_cfkit.py  note.txt  notes.txt  output.txt  parse.py  problem.py  program.py  pylint.out  pylint__main__.txt  pylint_cli.txt  pylint_commands.txt  pylint_contest.txt  pylint_parse.txt  pylint_problem.txt  pylint_run.txt  response.html  run.py  setup.cfg  setup.py  structure.txt  submit.py  test.html  test.py
cfkit/client/: fetch.py  login.py  pylint_fetch.txt  pylint_login.txt  pylint_submit.txt  submit.py
cfkit/cmd/: cli.py  pylint_cli.txt
cfkit/config/: config.py  implementation.py  pylint_implementation.txt
cfkit/config_folder/: config.py  config.yaml  platforms.json
cfkit/json/: extensions.json  (+4 more)
cfkit_config/: cfkit.conf  languages.json  languages_null.json
colorschemes/: default.conf
config_cfkit/: colors.py  languages.json  null.json
docs/: 1.md  2.md
examples/: config.mov
modules/: a.py.py  b.py  c.py  cfkit.py  d.py  ghoudi_yassine.html  test.py
old_files/: cfkit.py  commands.py  problem_statement.py
resources/: contests.json  last_fetched_data.json  problems.json  session.json  test_results.json  test_samples_results.json
src/: contest.py
tests/: colored_text.py  structure.txt
(+4838 files in other folders)
